# realsense-tracking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
Docker/: .env  Dockerfile  README.md  docker-compose.yml  opencv.sh  xivo.sh
Docker/base/: Dockerfile  dependecies_local.sh  ecal.ini  ecal_local.sh  o3d.patch  open3d_local.sh  opencv.sh  opencv_local.sh  realsense_local.sh  ros_entrypoint.sh  xivo.sh
Docker/landing_aarch64/: Dockerfile
Docker/landing_x86_64/: Dockerfile  local_install.sh
Docker/realsense_237/: Dockerfile
Docker/realsense_240/: Dockerfile
Docker/xivo/: Dockerfile  xivo.sh
assets/data/: o3d_view_default.json
assets/data/analysis/: alg_timings.csv  alg_timings_flight.csv  flight_1.pkl  flight_2.pkl  flight_3.pkl  man_1.pkl  man_2.pkl  man_3.pkl  man_4.pkl  man_5.pkl
bench/records/: unknown.txt
config/: camera_intrinsic_rgb_848.json  ecal.ini  reconstruction.json  rsintegrate_default.toml  rspub_default.toml  rspub_depth_color.toml  rssave_default.toml  rsserver_default.yaml  xivo_d435i.json
config/ecal/: ecal.ini  record_config.ecalrec
config/l515/: camera_intrinsic_depth_320.json  camera_intrinsic_rgb_1280.json  camera_intrinsic_rgb_640.json  rsintegrate_default.toml  rspub_default.toml
config/landing/: landing.yml
docker_images/: README.md
landing/: LandingClient.py  LandingService.py  LandingWidget.py  README.md  __init__.py  __main__.py  test.py
landing/LandingClient/: LandingClient.py
landing/LandingTUI/: LandingServiceMinimal.py  LandingTUI.py  main.py
landing/helper/: LineMesh.py  __init__.py  helper_logging.py  helper_meshes.py  helper_polylidar.py  helper_utility.py  helper_vis.py  o3d_util.py
landing/serial/: common.py
notebooks/: Analysis-Flight.ipynb  Analysis-Man.ipynb  Analysis.ipynb
proto/: Common.proto  IMUMessage.proto  ImageMessage.proto  Integrate.proto  LandingMessage.proto  PolygonMessage.proto  PoseMessage.proto  TouchdownMessage.proto
rpi/: config.txt
scripts/: calibrate.py  copy-data.sh  cpld.sh  rs-bag-folder.py  rs-integrate-client.py  rs-integrate-server.py  rs-proto-folder.py  sync-folders.sh  visualize.py
scripts/analysis/: ecal_to_csv.py  ecal_to_vid.py  visualize_pose.py  visualize_pose_update.py
scripts/analysis/archive/: visualize_pose.py
scripts/dependencies/: gather_all.sh
scripts/launch/: depth.py  launch_integrate.sh  launch_landing.sh  launch_pub_and_integrate_local.sh  launch_record.sh  launch_rspub.sh  pose.py
scripts/misc/: clear_logs.sh
scripts/scratch/: client.py  ecal_combo.py  server.py  simple_service.py  test_mp.py  tui.py
scripts/serial_test/: common.py  serial_read.py  serial_write.py
scripts/udp_test/: receive.py  send.py
server/: __main__.py  integrator.py  open3d_util.py  rs-integrate.py  visualize.py
server/ReconstructionSystem/: refine_trajectory.py  run_system.py
server/ReconstructionSystem/sensors/: realsense_recorder.py
server/Utility/: trajectory_io.py
server/rspub_pb/: Common_pb2.py  IMUMessage_pb2.py  ImageMessage_pb2.py  Integrate_pb2.py  Integrate_pb2_grpc.py  PointCloudMessage_pb2.py  PoseMessage_pb2.py
src/: rs-bag-folder.py  rs-integrate-server.cpp  rs-motion-2.cpp  rs-motion-2.py  rs-motion-syncer.cpp  rs-motion.cpp  rs-motion.py  rs-pub.cpp  rs-save.cpp  rs-test.cpp  rs-track-depth.cpp  rs-tracker.cpp  utility.cpp
src/archive/: rs-motion.cpp  rs-tracker.cpp
src/include/: example.hpp  utility.hpp
src/include/rspub/: ringbuffer.hpp  types_simple.hpp  utility.hpp
src/proto/: Common.proto  IMUMessage.proto  ImageData.proto  ImageMessage.proto  PointCloudMessage.proto  PoseMessage.proto
